--- a/UCS.Web/Views/_ViewImports.cshtml
+++ b/UCS.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using UniCourseSelect
 @using UniCourseSelect.Models
+@using UCS.Domain.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
