--- a/UCS.Web/Views/Shared/_Layout.cshtml
+++ b/UCS.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,14 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="Index">Department</a>
                     </li>
                     
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Course" asp-action="Index">Course</a>
+                    </li>
+                    
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Professor" asp-action="Index">Professor</a>
+                    </li>
+                    
                     
                 </ul>
             </div>
