--- a/UCS.Web/Views/Student/Delete.cshtml
+++ b/UCS.Web/Views/Student/Delete.cshtml
@@ -14,7 +14,7 @@
             <div class="p-3">
                 <input asp-for="Student.StudentId" hidden />
                 @* <div asp-validation-summary="All"></div> *@
-                
+
                 <div class="form-floating py-1 col-12">
                     <input asp-for="@Model.Student.FullName" disabled class="form-control border shadow" />
                     <label asp-for="@Model.Student.FullName" class="ms-2"></label>
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="form-floating py-1">
-                    <input asp-for="@Model.Student.Major"  class="form-control border shadow" />
+                    <input asp-for="@Model.Student.Major" disabled="" class="form-control border shadow" />
                     <label asp-for="@Model.Student.Major" class=" ms-2"> </label>
                     <span asp-validation-for="@Model.Student.Major" class=" text-danger"></span>
                 </div>
@@ -49,7 +49,7 @@
                         </button>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a asp-controller="VillaNumber" asp-action="Index" class="btn btn-secondary w-100">
+                        <a asp-controller="Student" asp-action="Index" class="btn btn-secondary w-100">
                             <i class="bi bi-x-circle"></i> Cancel
                         </a>
                     </div>
