--- a/UCS.Web/Views/Student/Index.cshtml
+++ b/UCS.Web/Views/Student/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="card-body">
             <div class="row mb-3">
                 <div class="col-12 text-end">
-                    
+
                     <a asp-controller="Student" asp-action="Create" class="btn btn-success">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
@@ -26,7 +26,7 @@
                             <th>StudentId</th>
                             <th>Degree</th>
                             <th>Major</th>
-                            <th> Department </th>
+                            <th> State </th>
                             <th> Edit </th>
                         </tr>
                     </thead>
@@ -38,10 +38,10 @@
                                 <td>@student.StudentId.ToString()</td>
                                 <td>@student.Degree</td>
                                 <td>@student.Major</td>
-                                <td>@student.FacultyId</td>
+                                <td>@student.State</td>
                                 <td>
                                     <div class=" w-75 btnbtn-group" role="group">
-                                        <a asp-controller="Student" asp-action="Update" asp-route-StudentId="@student.StudentId"
+                                        <a asp-controller="Student" asp-action="Update" asp-route-studentId="@student.StudentId"
                                             class="btn btn-success mx-2">
                                             <i class="bg bi-pencil-square"></i> Update
                                         </a>
