--- a/UCS.Web/Views/Student/Update.cshtml
+++ b/UCS.Web/Views/Student/Update.cshtml
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h2 class="text-white py-2">
-                    Create Student
+                    Update Student
                 </h2>
             </div>
         </div>
@@ -13,6 +13,9 @@
     <div class="card-body border p-4">
         <form method="post" class="row" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly"></div>
+            <input asp-for="Student.StudentId" hidden />
+
+
             <div class="form-floating py-1">
                 <input asp-for="@Model.Student.FullName" class="form-control border shadow" />
                 <label asp-for="@Model.Student.FullName" class=" ms-2"> </label>
