update theme and alignments

--- a/UCS.Web/Views/Home/Index.cshtml
+++ b/UCS.Web/Views/Home/Index.cshtml
@@ -1,23 +1,29 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
+﻿
+
+@{
+    ViewData["Title"] = "Home Page";
+}
+
+<div class="container">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UniCourseSelect - Create Account</title>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
     <link rel="stylesheet" href="~/css/Home.css">
-</head>
-<body>
-<div class="container">
     <div class="left-section">
         <div class="logo">
-            <img src="~/Media/freie-uni-berlin-logo-bildmarke.jpg" alt="UniCourseSelect Logo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/0/00/Siegel_FU_Berlin.svg"
+                 alt="UniCourseSelect Logo">
             <h1>UniCourseSelect</h1>
         </div>
+        <br />
         <div class="message">
             <h2>Don't Forget the Finals!!!!</h2>
             <p>Pick Your desired Course Before others can even log in</p>
         </div>
-        <img src="~/Media/intl-menschen.jpg" alt="University Image" class="university-image">
+        <img src="https://www.fu-berlin.de/en/sites/startseite-test/inhalte/intl-menschen.jpg?width=1000" alt="University Image" class="university-image">
     </div>
     <div class="right-section">
         <div class="form-container">
@@ -41,5 +47,3 @@
         </div>
     </div>
 </div>
-</body>
-</html>
