--- a/UCS.Web/Views/Student/Create.cshtml
+++ b/UCS.Web/Views/Student/Create.cshtml
@@ -38,12 +38,12 @@
 
 
             <div class="form-floating py-1 col-12">
-                <select asp-for="@Model.Student.FacultyId" asp-items="@Model.DepartmentList"
+                <select asp-for="@Model.Student.DepartmentId" asp-items="@Model.DepartmentList"
                         class="form-select border shadow">
                     <option disabled selected>--Select Faculty--</option>
                 </select>
-                <label asp-for="Student.FacultyId" class="ms-2"></label>
-                <span asp-validation-for="Student.FacultyId" class="text-danger"></span>
+                <label asp-for="Student.DepartmentId" class="ms-2"></label>
+                <span asp-validation-for="Student.DepartmentId" class="text-danger"></span>
             </div>
             
             <div class="form-floating py-1 col-12">
