--- a/UCS.Web/Views/Student/Index.cshtml
+++ b/UCS.Web/Views/Student/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IEnumerable<Student>
 
 <div class="container my-5">
-    <div class="card border-0 shadow-sm">
-        <div class="card-header bg-success text-white text-center py-4">
+    <div class="card border-0">
+        <div class="card-header text-white text-center py-4" style="background-color:var(--bs-primary)">
             <h2>Student's List</h2>
         </div>
         <div class="card-body">
@@ -60,23 +60,3 @@
         </div>
     </div>
 </div>
-
-<style>
-    .card-header {
-        background: linear-gradient(45deg, #5645, #218838);
-    }
-
-    .btn-success {
-        background-color: #28a745;
-        border-color: #28a745;
-    }
-
-        .btn-success:hover {
-            background-color: #218838;
-            border-color: #1e7e34;
-        }
-
-    .table-hover tbody tr:hover {
-        background-color: #f1f1f1;
-    }
-</style>
