--- a/UCS.Web/wwwroot/css/Home.css
+++ b/UCS.Web/wwwroot/css/Home.css
@@ -1,34 +1,39 @@
-﻿body {
+﻿header {
+    width: 100%;
+    display: block;
+    clear: both;
+}
+
+body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
     background-color: #f4f4f4;
     background-image: url("../Media/pngtree-wave-background-vector-wallpaper-picture-image_1874512.jpg");
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
     display: flex;
     width: 100%;
-    height: 100vh;
+    flex: 1; /* Ensure it takes up the remaining height after the header */
 }
 
 .left-section, .right-section {
     width: 50%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 27px;
 }
 
 .left-section {
-    background-color: #0074d9;
+    flex-direction: column;
+    background-color: var(--bs-heading-color);
     color: white;
-    height: 100vh; /* Make sure this section covers the full height */
+    height: 100%;
 }
 
 .logo {
@@ -64,14 +69,11 @@
 
 .right-section {
     background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Make sure this section covers the full height */
+    height: 100%;
 }
 
 .form-container {
-    width: 80%;
+    width: 100%;
     max-width: 400px;
 }
 
@@ -147,7 +149,7 @@
 }
 
 .facebook-btn {
-    background-color: #3b5998;
+    background-color: var(--bs-btn-bg);
     color: white;
 }
 
