--- a/UCS.Web/Views/Student/Delete.cshtml
+++ b/UCS.Web/Views/Student/Delete.cshtml
@@ -12,7 +12,7 @@
     <div class="card-body border p-4">
         <form method="post" class="row">
             <div class="p-3">
-                <input asp-for="Student.StudentId" hidden />
+                <input asp-for="Student.Id" hidden />
                 @* <div asp-validation-summary="All"></div> *@
 
                 <div class="form-floating py-1 col-12">
