--- a/UCS.Web/Views/_ViewImports.cshtml
+++ b/UCS.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using UniCourseSelect
 @using UniCourseSelect.Models
 @using UCS.Domain.Entities
+@using UniCourseSelect.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
