--- a/UCS.Web/Views/Department/Index.cshtml
+++ b/UCS.Web/Views/Department/Index.cshtml
@@ -3,7 +3,7 @@
 <div class="container my-5">
     <div class="card border-0 shadow-sm">
         <div class="card-header bg-success text-white text-center py-4">
-            <h2>Department's List</h2>
+            <h2>Departments' List</h2>
         </div>
         <div class="card-body">
             <div class="row mb-3">
