side navbar created

--- a/UCS.Web/Views/_ViewImports.cshtml
+++ b/UCS.Web/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using UniCourseSelect.Models
 @using UCS.Domain.Entities
 @using UniCourseSelect.ViewModels
+@using UCS.Application.Common.Utilities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
