--- a/UCS.Web/Views/Dashboard/Index.cshtml
+++ b/UCS.Web/Views/Dashboard/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Student
+
 ﻿<div class="container-fluid">
+
     <div class="row">
         <div class="page-title-box d-flex align-items-center justify-content-between">
             <h4 class="mb-0">Student Dashboard</h4>
@@ -118,8 +120,9 @@
                 </div>
             </div>
         </div>
-
     </div>
+
+
 </div>
 
 @section scripts {
@@ -130,8 +133,7 @@
 <style>
     .calendar-container {
         font-family: Arial, sans-serif;
-        max-width: 370px;
-        margin: 10px;
+    @* max-width: 370px;*@ margin: 10px;
         text-align: center;
     }
 
