--- a/UCS.Web/Views/_ViewStart.cshtml
+++ b/UCS.Web/Views/_ViewStart.cshtml
@@ -1,3 +1,11 @@
-﻿@{
+﻿@if (User.IsInRole(SD.Role_Admin))
+{
+    Layout = "_LayoutAdmin";
+}
+else if (User.IsInRole(SD.Role_Student))
+{
+    Layout = "_DashboardStudent";
+}else
+{
     Layout = "_Layout";
 }
